--- a/skud/quantum/templates/skud/base.html
+++ b/skud/quantum/templates/skud/base.html
@@ -39,11 +39,20 @@
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="device_list">Устройства</a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="add_device">Добавить устройство</a></li>
-                  <li><a class="dropdown-item" href="device_list">Добавленные устройства</a></li>
-                  <li><a class="dropdown-item" href="search_device">Поиск устройств</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Уровень доступа</a></li>
+                  
+                  <li><a class="dropdown-item" href="/add_device">Добавить устройство</a></li>
+                  <li><a class="dropdown-item" href="/device_list">Добавленные устройства</a></li>
+                  <li><a class="dropdown-item" href="/search_devices_list">Поиск устройств</a></li>
+                  <!-- <li><hr class="dropdown-divider"></li> -->
+                  <!-- <li><a class="dropdown-item" href="#">Уровень доступа</a></li>
+                  <li><a class="dropdown-item" href="#">Настройки двери</a></li> -->
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="#">Контроль доступа</a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="/access_control">Уровень доступа</a></li>
+                  <li><a class="dropdown-item" href="/door_settings">Настройки двери</a></li>
                 </ul>
               </li>
               <li class="nav-item">
@@ -70,22 +79,9 @@
   </section>
 </main>
 
-
-
-
-
-
-
-
-
-
-
-
-<footer>{% block footer %}
-
-{% endblock %}</footer>
+<footer>{% block footer %}{% endblock %}</footer>
 
   <script src="{% static 'js/bootstrap/bootstrap.bundle.min.js' %}" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-  <script src="{% static 'js/quantum.js' %}"></script>
+  <script src="{% static 'js/scripts.js' %}"></script>
 </body>
 </html>
