--- a/skud/quantum/templates/skud/views/all_device.html
+++ b/skud/quantum/templates/skud/views/all_device.html
@@ -18,7 +18,7 @@
     {% for device in devices %}
         <tbody>
           <tr>
-            <td></td>
+            <td>{{counts_device}}</td>
             <td>{{device.device_name}}</td>
             <td>{{device.device_mac}}</td>
             <td>{{device.device_ip}}</td>
@@ -26,12 +26,13 @@
             <td>{{device.device_type}}</td>
             <td>{{device.main_door}}</td>
             <td class="btn-lg ">
-            <a href="add_device"><i class="btn-lg bi bi-pencil-square btn-outline-secondary" title="Редактировать"></i></a>
-            <a href="#"><i class="btn-lg bi bi-stopwatch btn-outline-secondary" title="Установить время"></i></a>
-            <a href="delete_device/{{device.device_ip}}"><i class="btn-lg bi bi-trash btn-outline-secondary" title="Удалить устройство"></i></a>
+            <a href="/edit_device/{{device.id}}"><i class="btn-lg bi bi-pencil-square btn-outline-secondary" title="Редактировать"></i></a>
+            <a href="/device_list/{{device.id}}"><i class="btn-lg bi bi-stopwatch btn-outline-secondary" title="Установить время"></i></a>
+            <a href="/delete_device/{{device.device_ip}}"><i class="btn-lg bi bi-trash btn-outline-secondary" title="Удалить устройство"></i></a>
             </td>
           </tr>
         </tbody>
     {% endfor %}
 </table>
 {% endblock %}
+
