--- a/skud/quantum/templates/skud/views/door_setting.html
+++ b/skud/quantum/templates/skud/views/door_setting.html
@@ -1,5 +1,16 @@
 {% extends 'skud/base.html' %}
 
+{% block title %}
+  Настройки дверей
+{% endblock %}
+
+{% block saidbar %}
+<li>
+  <a href="#" class="nav-link text-white">
+    11
+  </a>
+</li>
+{% endblock %}
 
 {% block content %}
 <table class="table table-bordered table-striped table-hover">
