--- a/skud/quantum/templates/skud/views/search_device.html
+++ b/skud/quantum/templates/skud/views/search_device.html
@@ -4,6 +4,19 @@
   Поиск устройств
 {% endblock %}
 
+{% block saidbar %}
+<li>
+  <a href="/device_list" class="nav-link text-white">
+    Устройства
+  </a>
+</li>
+<li>
+  <a href="/search_devices_list" class="nav-link active">
+    Поиск устройств
+  </a>
+</li>
+{% endblock %}
+
 {% block content %}
   
 <table class="table table-bordered table-striped table-hover">
