--- a/skud/quantum/templates/skud/views/all_device.html
+++ b/skud/quantum/templates/skud/views/all_device.html
@@ -18,7 +18,8 @@
 {% endblock %}
 
 {% block content %}
-<a class="btn btn-primary" href="/add_device" role="button">Добавить устройство</a>
+<p><a class="btn btn-primary" href="/add_device" role="button">Добавить устройство</a></p>
+
 <table class="table table-bordered table-striped table-hover">
     <thead>
       <tr>
