--- a/skud/quantum/templates/skud/views/door_setting.html
+++ b/skud/quantum/templates/skud/views/door_setting.html
@@ -6,8 +6,8 @@
 
 {% block saidbar %}
 <li>
-  <a href="#" class="nav-link text-white">
-    11
+  <a href="/door_settings" class="nav-link active">
+    Настройки дверей
   </a>
 </li>
 {% endblock %}
