--- a/skud/quantum/templates/skud/views/users.html
+++ b/skud/quantum/templates/skud/views/users.html
@@ -11,7 +11,7 @@
         </a>
     </li>
     <li>
-        <a href="/create_department" class="nav-link text-white">
+        <a href="/department_list" class="nav-link text-white">
         Отделы
         </a>
     </li>
