--- a/skud/quantum/templates/skud/base.html
+++ b/skud/quantum/templates/skud/base.html
@@ -13,56 +13,13 @@
   </head>
 <body class="header-fixed header-tablet-and-mobile-fixed toolbar-enabled aside-fixed aside-default-enabled">
 
-<header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
-    <!-- Images icon -->
-        <a class="navbar-brand" href="#">
-          <img src="{% static 'images/photo_2020-05-04_19-13-22.png' %}" alt="" width="40" height="30">
-        </a>
-    <!-- Navbar -->
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/">Quantum Smart</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/users">Сотрудники</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Графики</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/device_list">Устройства</a>
-              </li>
-              
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="#">Контроль доступа</a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="/access_control">Уровень доступа</a></li>
-                  <li><a class="dropdown-item" href="/door_settings">Настройки двери</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Отчеты</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Мониторинг</a>
-              </li>
-            </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Поиск</button>
-            </form>
-          </div>
-        </div>
-      </nav>
+<header style="padding: 10px;" class="bg-secondary">
+  {% include 'skud/views/navbar.html' %}
 </header>
 
 <main>
   <div class="d-flex flex-row bd-highlight mb-3">
-      <div class="bd-highlight" style="padding-top: 10px;">
+      <div class="bd-highlight bg-secondary" style="padding: 10px;">
           <section>
             <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 280px; height: 100vh;">
               <hr>
@@ -73,21 +30,18 @@
             </div>
           </section>
       </div>
-      <div class="p-10 bd-highlight" style="width: 100%; padding: 10px;">
+      <div class="p-10 bd-highlight " style="width: 100%; padding: 10px;">
           <div class="content">{% block content %}{% endblock %}</div>
       </div>
   </div>
 </main>
 
-
-
-
-
-
-
 <footer>{% block footer %}{% endblock %}</footer>
 
   <script src="{% static 'js/bootstrap/bootstrap.bundle.min.js' %}" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
   <script src="{% static 'js/scripts.js' %}"></script>
+  <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
+  <script src="{% static 'js/department.js' %}"></script>
+ 
 </body>
 </html>
