--- a/skud/quantum/templates/skud/views/department_list.html
+++ b/skud/quantum/templates/skud/views/department_list.html
@@ -11,13 +11,19 @@
         </a>
     </li>
     <li>
-        <a href="/create_department" class="nav-link active">
+        <a href="/department_list" class="nav-link active">
         Отделы
         </a>
     </li>
 {% endblock %}
 
 {% block content %}
+    <p>
+        <button type="button" class="btn btn-primary js-create-department">
+        <span class="glyphicon glyphicon-plus"></span>
+        New book
+        </button>
+    </p>
     {% load mptt_tags %}
     <ol class="list-group list-group-numbered">
         {% recursetree department  %}
@@ -31,4 +37,10 @@
             </li>
         {% endrecursetree %}
     </ol>
+
+    <div class="modal fade" id="modal-department">
+        <div class="modal-dialog">
+            <div class="modal-content">
+            </div>
+        </div>
 {% endblock %}
