--- a/skud/quantum/templates/skud/views/door_setting.html
+++ b/skud/quantum/templates/skud/views/door_setting.html
@@ -6,6 +6,9 @@
 
 {% block saidbar %}
 <li>
+  <a class="nav-link text-white" href="/access_control">Уровень доступа</a></li>
+</li>
+<li>
   <a href="/door_settings" class="nav-link active">
     Настройки дверей
   </a>
