--- a/skud/quantum/templates/skud/views/navbar.html
+++ b/skud/quantum/templates/skud/views/navbar.html
@@ -13,7 +13,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/users">Сотрудники</a>
+                    <a class="nav-link active" aria-current="page" href="/users_list">Сотрудники</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Графики</a>
@@ -22,12 +22,8 @@
                     <a class="nav-link" href="/device_list">Устройства</a>
                 </li>
 
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="#">Контроль доступа</a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="/access_control">Уровень доступа</a></li>
-                        <li><a class="dropdown-item" href="/door_settings">Настройки двери</a></li>
-                    </ul>
+                <li class="nav-item">
+                        <li class="nav-item"><a class="nav-link" href="/access_control">Контроль доступа</a></li>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Отчеты</a>
