--- a/skud/quantum/templates/skud/base.html
+++ b/skud/quantum/templates/skud/base.html
@@ -38,10 +38,11 @@
 
 <footer>{% block footer %}{% endblock %}</footer>
 
-  <script src="{% static 'js/bootstrap/bootstrap.bundle.min.js' %}" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-  <script src="{% static 'js/scripts.js' %}"></script>
+  
   <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
   <script src="{% static 'js/department.js' %}"></script>
+  <script src="{% static 'js/bootstrap/bootstrap.bundle.min.js' %}" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+  <script src="{% static 'js/bootstrap/bootstrap.min.js' %}"></script>
  
 </body>
 </html>
