--- a/skud/quantum/templates/skud/views/navbar.html
+++ b/skud/quantum/templates/skud/views/navbar.html
@@ -1,12 +1,12 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <!-- Images icon -->
-    <a class="navbar-brand" href="#">
+    <!-- <a class="navbar-brand" href="#">
         <img src="{% static 'images/photo_2020-05-04_19-13-22.png' %}" alt="" width="40" height="30" />
-    </a>
+    </a> -->
     <!-- Navbar -->
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">Quantum Smart</a>
+        <a class="navbar-brand" href="/users_list">Quantum Smart</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -14,9 +14,6 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/users_list">Сотрудники</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Графики</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/device_list">Устройства</a>
@@ -29,7 +26,7 @@
                     <a class="nav-link" href="#">Отчеты</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Мониторинг</a>
+                    <a class="nav-link" href="#">Система</a>
                 </li>
             </ul>
             <form class="d-flex">
