--- a/skud/quantum/templates/skud/views/search_device.html
+++ b/skud/quantum/templates/skud/views/search_device.html
@@ -18,7 +18,7 @@
 {% endblock %}
 
 {% block content %}
-  
+<p><a class="btn btn-primary" href="/search_devices_list/all" role="button">Поиск</a></p>
 <table class="table table-bordered table-striped table-hover">
   <thead>
     <tr>
