--- a/skud/quantum/templates/skud/views/access_control.html
+++ b/skud/quantum/templates/skud/views/access_control.html
@@ -1,16 +1,44 @@
 {% extends 'skud/base.html' %}
 
 {% block title %}
-  Настройки дверей
+    Уровень доступа
 {% endblock %}
 
 {% block saidbar %}
 <li>
-  <a class="nav-link active" href="/access_control">Уровень доступа</a></li>
+    <a class="nav-link active" href="/access_control">Уровень доступа</a></li>
 </li>
 <li>
-  <a href="/door_settings" class="nav-link text-white">
+    <a href="/door_settings" class="nav-link text-white">
     Настройки дверей
-  </a>
+    </a>
 </li>
+{% endblock %}
+
+{% block content %}
+<p><a class="btn btn-primary" href="/access_control/create" role="button">Создать доступ</a></p>
+
+<table class="table table-bordered table-striped table-hover">
+    <thead>
+        <tr>
+            <th scope="col">Название</th>
+            <th scope="col">Количество устройств</th>
+            <th scope="col">Временная зона</th>
+        </tr>
+    </thead>
+
+    {% for access in access_control %}
+        <tbody>
+            <tr>
+                <td>{{access.access_name}}</td>
+                <td>{{access.lock_control}}</td>
+                <td>{{access.time_zone}}</td>
+                <td class="btn-lg">
+                <a href="access_control/{{access.access_name}}/edit"><i class="btn-lg bi bi-pencil-square btn-outline-secondary" title="Редактировать"></i></a>
+                <a href="access_control/{{access.access_name}}/delete"><i class="btn-lg bi bi-trash btn-outline-secondary" title="Удалить доступ"></i></a>
+                </td>
+            </tr>
+        </tbody>
+    {% endfor %}
+</table>
 {% endblock %}
