--- a/skud/quantum/templates/skud/views/department/department_form.html
+++ b/skud/quantum/templates/skud/views/department/department_form.html
@@ -10,3 +10,27 @@
     </div>
 {% endfor %}
 
+<!-- <div class="modal-body">
+        
+
+
+    <div class="form-group">
+        <label for="id_name">Название</label>
+        <input type="text" maxlength="64"class="form-control" required="">
+        
+    </div>
+
+    <div class="form-group">
+        <label for="id_parent">Родитель</label>
+        <select class="form-control">
+            <option selected>Родитель</option>
+            {% for dep in department %}
+            <option value="{{dep.id}}">{{dep.name}}</option>
+            {% endfor %}
+            
+
+        </select>
+        
+    </div>
+</div> -->
+
