--- a/skud/quantum/templates/skud/views/users_list.html
+++ b/skud/quantum/templates/skud/views/users_list.html
@@ -24,4 +24,36 @@
     Добавить
     </a>
 </p>
+
+<table class="table table-bordered table-striped table-hover ">
+    <thead>
+        <tr>
+            <th scope="row">Номер сотрудника</th>
+            <th scope="col">Фамилия</th>
+            <th scope="col">Имя</th>
+            <th scope="col">Номер карты</th>
+            <th scope="col">Отдел</th>
+            <th scope="col">Доступ</th>
+        </tr>
+    </thead>
+
+    {% for door in doors %}
+        <tbody>
+            <tr>
+                <td>{{door.door_number}}</td>
+                <td>{{door.name_door}}</td>
+                <td>{{door.device_name}}</td>
+                <td>{{door.driver_time}}</td>
+                <td>{{door.detector_time}}</td>
+                <td>{{door.inter_time}}</td>
+                <td>{{door.sensor_type}}</td>
+                <td class="btn-lg ">
+                <a href="#"><i class="btn-lg bi bi-pencil-square btn-outline-secondary" title="Редактировать"></i></a>
+                <a href="#"><i class="btn-lg bi bi-door-open btn-outline-secondary" title="Открыть дверь"></i></a>
+                <a href="#"><i class="btn-lg bi bi-door-closed btn-outline-secondary" title="Закрыть дверь"></i></a>
+                </td>
+            </tr>
+        </tbody>
+    {% endfor %}
+</table>
 {% endblock %}
