--- a/skud/quantum/templates/skud/base.html
+++ b/skud/quantum/templates/skud/base.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="Quantum Smart" content="Главная страница">
     <title>{% block title %}{% endblock %}</title>
-    <link href="{% static 'css/bootstrap/bootstrap.min.css' %}" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="{% static 'css/bootstrap/bootstrap.min.css' %}" rel="stylesheet"  crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/quantum.css' %}">
     <link rel="stylesheet" href="{% static 'icons\font\bootstrap-icons.css' %}">
   </head>
@@ -19,7 +19,7 @@
 
 <main>
   <div class="d-flex flex-row bd-highlight mb-3">
-      <div class="bd-highlight bg-secondary" style="padding: 10px;">
+      <div class="bd-highlight bg-secondary" style="padding: 10px; padding-top: 0px;">
           <section>
             <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 280px; height: 100vh;">
               <hr>
@@ -42,8 +42,12 @@
   <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
   <script src="{% static 'js/department.js' %}"></script>
   <script src="{% static 'js/access.js' %}"></script>
-  <script src="{% static 'js/bootstrap/bootstrap.bundle.min.js' %}" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-  <script src="{% static 'js/bootstrap/bootstrap.min.js' %}"></script>
- 
+  <script src="{% static 'js/user_create.js' %}"></script>
+  <script src="{% static 'js/scripts.js' %}"></script>
+  <!-- <script src="{% static 'js/bootstrap_5.1.3/bootstrap.bundle.min.js' %}" ></script> -->
+  <script src="{% static 'js/bootstrap_5.1.3/bootstrap.min.js' %}"></script>
+  <!-- <script src="{% static 'js/bootstrap/bootstrap.js' %}"></script> -->
+  {% block scripts %}{% endblock %}
+  
 </body>
 </html>
