--- a/skud/quantum/templates/skud/views/all_device.html
+++ b/skud/quantum/templates/skud/views/all_device.html
@@ -36,7 +36,7 @@
     {% for device in devices %}
         <tbody>
           <tr>
-            <td>{{counts_device}}</td>
+            <td>{{forloop.counter}}</td>
             <td>{{device.device_name}}</td>
             <td>{{device.device_mac}}</td>
             <td>{{device.device_ip}}</td>
