--- a/skud/quantum/templates/skud/views/door_setting.html
+++ b/skud/quantum/templates/skud/views/door_setting.html
@@ -13,6 +13,9 @@
     Настройки дверей
   </a>
 </li>
+<li>
+  <a class="nav-link text-white" href="/live_mode">Мониторинг</a></li>
+</li>
 {% endblock %}
 
 {% block content %}
