--- a/skud/quantum/templates/skud/views/user_create.html
+++ b/skud/quantum/templates/skud/views/user_create.html
@@ -1,7 +1,8 @@
 {% extends 'skud/base.html' %}
+{% load static %}
 
 {% block title %}
-    Список Сотрудников
+    Новый сотрудник
 {% endblock %}
 
 {%block saidbar%}
@@ -15,4 +16,108 @@
         Отделы
         </a>
     </li>
+{% endblock %}
+
+{% block content %}
+<form method="POST">
+    {% csrf_token %}
+    
+    <div class="overflow-hidden">
+        <div class="row row-cols-auto">
+            <div class="col" >
+                <img src="{% static 'images/user.png' %}" id="output" class="rounded float-left" alt="..." style="height: 200px; width: 200px;">
+                <div class="input-group mt-1">
+                    <label class="btn btn-primary" for="file">
+                        Выбрать изображение <input type="file" name="images" hidden id="file" onchange="loadFile(event)">
+                    </label>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="input-group mb-3" hidden>
+                    <span class="input-group-text" >ID</span>
+                    <input value="{{user_id}}" name="userId" type="number" class="form-control">
+                </div>
+                <div class="input-group mb-3">
+                    <span class="input-group-text">Фамилия и Имя</span>
+                    <input type="text" name="surname" placeholder="Фамилия" class="form-control">
+                    <input type="text" name="name" placeholder="Имя" class="form-control">
+                </div>
+                <div class="input-group mb-3">
+                    <span class="input-group-text">Отдел</span>
+                    <select class="form-select" name="department" required>
+                        <option disabled>Выберите отдел сотрудника</option>
+                        {% for department in departments %}
+                        <option value="{{department.id}}">{{department.name}}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="basic-addon1"><i class="bi bi-card-checklist"></i></span>
+                    <input type="text" name="card_number" placeholder="Номер карты" class="form-control">
+                    </div>
+                <div class="input-group mb-3">
+                    <button type="submit" class="btn btn-primary" value='Save'>Добавить</button>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <button class="btn btn-primary mt-5" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                <i class="bi bi-chevron-bar-contract"></i>
+                Выберите Уровень доступа
+                <i class="bi bi-chevron-bar-contract"></i>
+                </button>
+            <div class="collapse" id="collapseExample">
+                <div class="card card-body">
+                    <div class="row">
+                        <div class="col" >
+                            <div class="p-3 border bg-light">
+                                <div class="list-group" id="table1">
+                                    {% for access in access_levels %}
+                                    <label class="list-group-item" >
+                                        <input class="form-check-input mr-1" type="checkbox" name='access_list' value="{{access.id}}">
+                                        {{access.access_name}}
+                                    </label>
+                                    {% empty %}
+                                    <span class="input-group-text">Список пуст</span>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-auto align-self-center">
+                            <div class="mb-3">
+                                <button type="button" class="btn btn-outline-danger" id="right">
+                                <i class="bi bi-arrow-bar-right"></i>
+                            </button>
+                            </div>
+            
+                            <div class="mt-3">
+                                <button type="button" class="btn btn-outline-danger" id="left">
+                                <i class="bi bi-arrow-bar-left"></i>
+                            </button>
+                            </div>
+                        </div>
+                        
+                        <div class="col">
+                            <div class="p-3 border bg-light" >
+                                <div class="list-group" id="table2"></div>
+                            </div>
+                        </div>
+                    
+                    </div>
+                </div>
+            </div>
+        </div>
+    
+</form>
+
+{% endblock %}
+
+{% block scripts %}
+    <script>
+        var loadFile = function(event) {
+        var image = document.getElementById('output');
+        image.src = URL.createObjectURL(event.target.files[0]);
+        };
+    </script>
 {% endblock %}
