--- a/skud/quantum/templates/skud/base.html
+++ b/skud/quantum/templates/skud/base.html
@@ -44,10 +44,12 @@
   <script src="{% static 'js/access.js' %}"></script>
   <script src="{% static 'js/user_create.js' %}"></script>
   <script src="{% static 'js/scripts.js' %}"></script>
+  <script src="{% static 'js/monitoring.js' %}"></script>
   <!-- <script src="{% static 'js/bootstrap_5.1.3/bootstrap.bundle.min.js' %}" ></script> -->
   <script src="{% static 'js/bootstrap_5.1.3/bootstrap.min.js' %}"></script>
   <!-- <script src="{% static 'js/bootstrap/bootstrap.js' %}"></script> -->
   {% block scripts %}{% endblock %}
+  
   
 </body>
 </html>
