--- a/skud/quantum/templates/skud/views/navbar.html
+++ b/skud/quantum/templates/skud/views/navbar.html
@@ -23,7 +23,7 @@
                         <li class="nav-item"><a class="nav-link" href="/access_control">Контроль доступа</a></li>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Отчеты</a>
+                    <a class="nav-link" href="/reports">Отчеты</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Система</a>
