--- a/skud/quantum/templates/skud/views/user_create.html
+++ b/skud/quantum/templates/skud/views/user_create.html
@@ -40,8 +40,8 @@
                 </div>
                 <div class="input-group mb-3">
                     <span class="input-group-text">Фамилия и Имя</span>
-                    <input type="text" name="surname" placeholder="Фамилия" class="form-control">
-                    <input type="text" name="name" placeholder="Имя" class="form-control">
+                    <input type="text" name="surname" placeholder="Фамилия" class="form-control" required>
+                    <input type="text" name="name" placeholder="Имя" class="form-control" required>
                 </div>
                 <div class="input-group mb-3">
                     <span class="input-group-text">Отдел</span>
@@ -54,7 +54,7 @@
                 </div>
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="basic-addon1"><i class="bi bi-card-checklist"></i></span>
-                    <input type="text" name="card_number" placeholder="Номер карты" class="form-control">
+                    <input type="text" name="card_number" placeholder="Номер карты" class="form-control" required>
                     </div>
                 <div class="input-group mb-3">
                     <button type="submit" class="btn btn-primary" value='Save'>Добавить</button>
