--- a/skud/quantum/templates/skud/base.html
+++ b/skud/quantum/templates/skud/base.html
@@ -41,10 +41,13 @@
   
   <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
   <script src="{% static 'js/department.js' %}"></script>
+  <script src="{% static 'js/grafik.js' %}"></script>
   <script src="{% static 'js/access.js' %}"></script>
   <script src="{% static 'js/user_create.js' %}"></script>
   <script src="{% static 'js/scripts.js' %}"></script>
   <script src="{% static 'js/monitoring.js' %}"></script>
+  <script src="{% static 'js/door_edit.js' %}"></script>
+  {% block js %} {% endblock %}
   <!-- <script src="{% static 'js/bootstrap_5.1.3/bootstrap.bundle.min.js' %}" ></script> -->
   <script src="{% static 'js/bootstrap_5.1.3/bootstrap.min.js' %}"></script>
   <!-- <script src="{% static 'js/bootstrap/bootstrap.js' %}"></script> -->
