--- a/skud/quantum/templates/skud/views/all_device.html
+++ b/skud/quantum/templates/skud/views/all_device.html
@@ -45,12 +45,27 @@
             <td>{{device.main_door}}</td>
             <td class="btn-lg">
             <a href="/edit_device/{{device.id}}"><i class="btn-lg bi bi-pencil-square btn-outline-secondary" title="Редактировать"></i></a>
-            <a href="/device_list/{{device.id}}"><i class="btn-lg bi bi-stopwatch btn-outline-secondary" title="Установить время"></i></a>
+            <a href="#" id="time" name="{{device.id}}" onclick="time({{device.id}})"><i class="btn-lg bi bi-stopwatch btn-outline-secondary" title="Установить время"></i></a>
             <a href="/delete_device/{{device.device_ip}}"><i class="btn-lg bi bi-trash btn-outline-secondary" title="Удалить устройство"></i></a>
             </td>
           </tr>
         </tbody>
     {% endfor %}
 </table>
+{% endblock %}
+
+{% block js %}
+<script>
+  function time(id){
+    $.ajax({
+    url: `device_list/${id}/time`,
+    type: 'get',
+    dataType: 'json',
+    success: function (data) {
+      alert(data.message);
+    }
+    });
+  }
+</script>
 {% endblock %}
 
