--- a/skud/quantum/templates/skud/views/door_setting.html
+++ b/skud/quantum/templates/skud/views/door_setting.html
@@ -43,7 +43,8 @@
             <td>{{door.inter_time}}</td>
             <td>{{door.sensor_type}}</td>
             <td class="btn-lg ">
-            <a href="#"><i class="btn-lg bi bi-pencil-square btn-outline-secondary" title="Редактировать"></i></a>
+              
+            <a href="#" class="js_door_setting" data-url="{% url 'quantum:door_edit' door.id %}"><i class="btn-lg bi bi-pencil-square btn-outline-secondary" title="Редактировать"></i></a>
             <a href="#"><i class="btn-lg bi bi-door-open btn-outline-secondary" title="Открыть дверь"></i></a>
             <a href="#"><i class="btn-lg bi bi-door-closed btn-outline-secondary" title="Закрыть дверь"></i></a>
             </td>
@@ -51,5 +52,14 @@
         </tbody>
     {% endfor %}
 </table>
+
+<div class="modal fade" id="modal-door">
+  <div class="modal-dialog">
+      <div class="modal-content">
+      </div>
+  </div>
+</div>
 {% endblock %}
+
+
 
