--- a/skud/quantum/templates/skud/views/department/department_form.html
+++ b/skud/quantum/templates/skud/views/department/department_form.html
@@ -11,6 +11,27 @@
 {% endfor %}
 
 
+<!-- <div class="form-group">
+    <label for="id_name">Название</label>
+    <input type="text" maxlength="64" class="form-control" required>
+</div>
+
+<div class="form-group">
+    <label for="id_parent" name="parent" id="id_parent">Родитель</label>
+    <select class="form-control">
+        {% for dep in form %}
+        <option value="{{dep.id}}">{{dep.parent.name}}</option>
+        {% endfor %}
+        
+
+    </select>
+    
+</div> -->
+
+
+
+
+
 <!-- <div class="modal-body">
         
 
