--- a/skud/quantum/templates/skud/views/reports/filter/all_reports.html
+++ b/skud/quantum/templates/skud/views/reports/filter/all_reports.html
@@ -1,8 +1,6 @@
 {% extends 'skud/views/reports/report.html' %}
 
-{% block 'reports' %}
-
-
+{% block 'protocol' %}
 <table class="table table-bordered table-striped table-hover">
     <thead>
         <tr>
