--- a/skud/quantum/templates/skud/views/reports/smena.html
+++ b/skud/quantum/templates/skud/views/reports/smena.html
@@ -17,7 +17,7 @@
     <a class="nav-link text-white" href="/reports/grafik">Создание графика</a></li>
 </li>
 <li>
-    <a class="nav-link text-white" href="#">График сотрудников</a></li>
+    <a class="nav-link text-white" href="/reports/user_grafik">График сотрудников</a></li>
 </li>
 {% endblock %}
 
