--- a/skud/quantum/templates/skud/base.html
+++ b/skud/quantum/templates/skud/base.html
@@ -21,7 +21,7 @@
   <div class="d-flex flex-row bd-highlight mb-3">
       <div class="bd-highlight bg-secondary" style="padding: 10px; padding-top: 0px;">
           <section>
-            <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 280px; height: 100vh;">
+            <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark bg-secondary" style="width: 280px; height: 100vh;">
               <hr>
               <ul class="nav nav-pills flex-column mb-auto">
                 {%block saidbar%}{% endblock %}
@@ -47,6 +47,7 @@
   <script src="{% static 'js/scripts.js' %}"></script>
   <script src="{% static 'js/monitoring.js' %}"></script>
   <script src="{% static 'js/door_edit.js' %}"></script>
+  <script src="{% static 'js/user_grafik.js' %}"></script>
   {% block js %} {% endblock %}
   <!-- <script src="{% static 'js/bootstrap_5.1.3/bootstrap.bundle.min.js' %}" ></script> -->
   <script src="{% static 'js/bootstrap_5.1.3/bootstrap.min.js' %}"></script>
